--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <header></header>
+    <nav></nav>
+    <main></main>
+    <footer></footer>
     
 </body>
 </html>
